# CUDA-Transformer

./: .gitignore  CMakeLists.txt  OptimizationTypes.txt  README.md  Readme.md  config.txt  configs_to_change.txt  energy.sh  energy1.sh  main.cpp
include/Commands/: ChooseIfElseBranch.h  KernelCallReduction.h  LoopPerforation.h  RemoveIfElseBranches.h  RemoveSyncThread.h  ReplaceAtomicWithBlock.h  ReplaceAtomicWithDirect.h  ReplaceDoubleWithFloat.h  ReplaceSyncThreadWithActive.h  ReplaceSyncThreadWithTile.h  ReplaceSyncWithWarp.h  TransformCommand.h
include/Helper/: AccuracyEvaluator.h  ConfigParser.h  DefaultEvaluator.h  FileHandler.h  Logger.h  QuickResponse.h  TimeoutException.h  Timer.h
include/Transformer/: CUDA_ASTConsumer.h  CUDA_ASTVisitor.h  CUDA_Analyze_ASTConsumer.h  CUDA_Analyze_FrontendAction.h  CUDA_Analyze_FrontendActionFactory.h  CUDA_FrontendAction.h  CUDA_FrontendActionFactory.h  CUDA_Transform_ASTConsumer.h  CUDA_Transform_FrontendAction.h  CUDA_Transform_FrontendActionFactory.h  CUDA_TransformerTool.h  Expressions.h  Transformer.h
split/minibenchmarks/openmp/: fft  heat  integrate
src/: CUDA_ASTConsumer.cpp  CUDA_ASTVisitor.cpp  CUDA_Analyze_ASTConsumer.cpp  CUDA_Analyze_FrontendAction.cpp  CUDA_Analyze_FrontendActionFactory.cpp  CUDA_FrontendAction.cpp  CUDA_Transform_ASTConsumer.cpp  CUDA_Transform_FrontendAction.cpp  CUDA_Transform_FrontendActionFactory.cpp  CUDA_TransformerTool.cpp  Transformer.cpp
src/Commands/: ChooseIfElseBranch.cpp  KernelCallReduction.cpp  LoopPerforation.cpp  RemoveIfElseBranches.cpp  RemoveSyncThread.cpp  ReplaceAtomicWithBlock.cpp  ReplaceAtomicWithDirect.cpp  ReplaceDoubleWithFloat.cpp  ReplaceSyncThreadWithActive.cpp  ReplaceSyncThreadWithTile.cpp  ReplaceSyncWithWarp.cpp
src/Helper/: ConfigParser.cpp  DefaultEvaluator.cpp  FileHandler.cpp  Logger.cpp  QuickResponse.cpp  Timer.cpp
tests/gardenia/: CMakeLists.txt  README.md  config.txt  gardenia_example_config.txt  gardenia_main.cpp
tests/gardenia/source/src/: common.mk
tests/gardenia/source/src/bc/: linear_base.cu  topo_lb.cu
tests/grappolo/: CMakeLists.txt  README.md  config.txt  grappolo_example_config.txt  grappolo_main.cpp
tests/grappolo/fixed_source_code/: CMakeLists.txt  binWiseGaussSeidel.cu  gatherInformation.cu  preprocessing.cu
tests/grappolo/source/: CMakeLists.txt
tests/grappolo/source/gpu_graph/: CMakeLists.txt  aggregateCommunity.cu  graphGPU.cu
tests/polybench/: CMakeLists.txt  config.txt  polybench_config.txt  polybench_main.cpp
tests/polybench/results/001/: 2DConvolution.cu  log_001.txt
tests/polybench/results/002/: 2DConvolution.cu  log_002.txt
tests/polybench/results/010/: 2DConvolution.cu  log_010.txt
tests/polybench/results/011/: 2DConvolution.cu  log_011.txt
tests/polybench/results/020/: 2DConvolution.cu  log_020.txt
tests/polybench/results/022/: 2DConvolution.cu  log_022.txt
tests/polybench/results/100/: 2DConvolution.cu  log_100.txt
tests/polybench/results/101/: 2DConvolution.cu  log_101.txt
tests/polybench/results/110/: 2DConvolution.cu  log_110.txt
tests/polybench/results/111/: 2DConvolution.cu  log_111.txt
tests/polybench/results/200/: 2DConvolution.cu  log_200.txt
tests/polybench/results/202/: 2DConvolution.cu  log_202.txt
tests/polybench/results/222/: 2DConvolution.cu  log_222.txt
